--- a/index.html
+++ b/index.html
@@ -5,8 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>New Year New Me</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,500;0,600;0,700;1,400&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <header>
+        <div class="banner">
+            <div class="banner-contents">
+                <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
+                <p class="banner-txt">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <div class="btn-container">
+                    <button class="primary-btn">Contact Us</button>
+                </div>
+            </div>
+        </div>
+    </header>
+    <main> 
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
