added Failure section

--- a/index.html
+++ b/index.html
@@ -15,14 +15,34 @@
         <div class="banner">
             <div class="banner-contents">
                 <h1 class="banner-title">All Thinks Are Possible If You believe</h1>
-                <p class="banner-txt">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <h3 class="banner-txt">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</h3>
                 <div class="btn-container">
                     <button class="primary-btn">Contact Us</button>
                 </div>
             </div>
         </div>
     </header>
-    <main> 
+    <main>
+        <section class="failure">
+            <div class="failure-section-container">
+                <div class="failure-img-container">
+                    <img src="images/person.png" alt="" class="failure-img">
+                </div>
+                <div class="failure-text-container">
+                    <div class="failure-align">
+                        <h1 class="failure-title">My failures of previous year</h1>
+                        <h3 class="failure-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</h3>
+                        <ul class="failurelist">
+                            <li class="failure-list-items">Contrary to popular belief, is not simply.</li>
+                            <li class="failure-list-items">Contrary to popular belief.</li>
+                            <li class="failure-list-items">Contrary to popular , is not simply.</li>
+                            <li class="failure-list-items">Contrary to popular belief, is not simply.</li>
+                            <li class="failure-list-items">Contrary to popular simply.</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </main>
     <footer>
