--- a/index.html
+++ b/index.html
@@ -42,6 +42,40 @@
             </div>
         </section>
 
+        <section class="service">
+            <h1 class="plans-sect-title">My Plans</h1>
+            <div class="plans-container">
+                <div class="plans">
+                    <img src="images/icons/web.png" alt="web icon" class="plan-img">
+                    <h1 class="plans-titles">Web Development</h1>
+                    <p class="plans-text">I want to start</p>
+                </div>
+                <div class="plans">
+                    <img src="images/icons/js.png" alt="web icon" class="plan-img">
+                    <h1 class="plans-titles">Javascript</h1>
+                    <p class="plans-text">I want to start</p>
+                </div>
+                <div class="plans">
+                    <img src="images/icons/smoke.png" alt="web icon" class="plan-img">
+                    <h1 class="plans-titles">Smoking Habit</h1>
+                    <p class="plans-text">I want to start</p>
+                </div>
+                <div class="plans">
+                    <img src="images/icons/ecom.png" alt="web icon" class="plan-img">
+                    <h1 class="plans-titles">ecommerce</h1>
+                    <p class="plans-text">I want to start</p>
+                </div>
+            </div>
+        </section>
+
+        <section class="call-now-section">
+            <div class="call-now-container">
+                <h1 class="call-me-text">Awlays keep a positive<br>mindset</h1>
+                <button class="second-btn">Call Now</button>
+            </div>
+
+        </section>
+
     </main>
     <footer>
 
