Finished the webpage

--- a/index.html
+++ b/index.html
@@ -73,12 +73,29 @@
                 <h1 class="call-me-text">Awlays keep a positive<br>mindset</h1>
                 <button class="second-btn">Call Now</button>
             </div>
-
         </section>
-
     </main>
     <footer>
-
+        <div class="footer-container">
+            <div class="footer-left">
+                <h1 class="footer-titles">Future</h1>
+                <h1 class="footer-txt">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words
+                </h1>
+                <h1 class="footer-txt">Email : info@gmail.com</h1>
+                <h1 class="footer-txt">Phone : 01500 00 00 00</h1>
+                <div class="social-icons-container">
+                    <a href="" class="social-icons"><img src="images/icons/fb.png" alt="">
+                    </a><a href="" class="social-icons"><img src="images/icons/twitter.png" alt=""></a>
+                    <a href="" class="social-icons"><img src="images/icons/youtube.png" alt=""></a>
+                </div>
+            </div>
+            <div class="footer-right">
+                <h1 class="footer-titles">Subscribe</h1>
+                <input type="text" placeholder="Enter your email" name="email" >
+                <button class="second-btn">Subscribe</button>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
